--- a/utf8fuzz/utf8fuzz.csproj
+++ b/utf8fuzz/utf8fuzz.csproj
@@ -7,7 +7,7 @@
     <NETCoreAppMaximumVersion>3.0</NETCoreAppMaximumVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <HighEntropyVA>true</HighEntropyVA>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
